--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Dale Larie's Website</title>
+  <meta charset='utf-8'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Dale Larie</title>
   </head>
   <body>
-
+    <div id="intro">
+      <header class="main-header">
+        Dale Larie
+      </header>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="projects">Projects</a></li>
+          <li><a href="resume">Resume</a></li>
+          <li><a href="contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </body>
 </html>
