--- a/index.html
+++ b/index.html
@@ -14,11 +14,24 @@
       <nav class="main-nav">
         <ul>
           <li><a href="#about">About</a></li>
-          <li><a href="projects">Projects</a></li>
-          <li><a href="resume">Resume</a></li>
-          <li><a href="contact">Contact</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="./assets/DaleLarieResume.pdf">Resume</a></li>
+          <li><a href="mailto:daleblarie@gmail.com">Contact</a></li>
         </ul>
       </nav>
     </div>
+    <main class="content">
+      <section class="about">
+        <h2 id="about">About</h2>
+        <div class="profile">
+          <img src="./assets/profile.jpg" width="200" height="286.5">
+        </div>
+        <p> Hey there!</p>
+        <p>My name is Dale, and I am a student at the University of Vermont, expected to graduate in May 2020. I am studying Biomedical Engineering, with a concentration in System and Network Biology. At UVM, this basically means that I will be concentrating in Comupter Science in Biomedical Engineering.</p>
+
+        <p> I am from New Hampshire, and spent alot of my youth in the great wilderness of New England with the Boy Scouts, eventually earning the rank of Eagle Scout. However, when my brother moved to San Francisco after college, he introduced me to computer programming and web development, and I have been in love with it since.</p>
+      </section>
+      <section class"projects">
+        <h2 id="projects">Projects</h2>
   </body>
 </html>
