Added pics and planetary movement

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset='utf-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <title>Dale Larie</title>
   </head>
   <body>
@@ -27,11 +28,14 @@
           <img src="./assets/profile.jpg" width="200" height="286.5">
         </div>
         <p> Hey there!</p>
-        <p>My name is Dale, and I am a student at the University of Vermont, expected to graduate in May 2020. I am studying Biomedical Engineering, with a concentration in System and Network Biology. At UVM, this basically means that I will be concentrating in Comupter Science in Biomedical Engineering.</p>
+        <p>My name is Dale, and I am a student at the University of Vermont, expected to graduate in May 2020. I am studying Biomedical Engineering, with a concentration in System and Network Biology. At UVM, this basically means that I will be concentrating in Comupter Science in Biomedical Engineering. I am also planning on earning a minor in computer science.</p>
 
         <p> I am from New Hampshire, and spent alot of my youth in the great wilderness of New England with the Boy Scouts, eventually earning the rank of Eagle Scout. However, when my brother moved to San Francisco after college, he introduced me to computer programming and web development, and I have been in love with it since.</p>
       </section>
       <section class"projects">
         <h2 id="projects">Projects</h2>
+        <p> This is a planetary movement and gravity simulator I made using javascript. The planets all have their own mass, and their gravity's all interact with eachother. These are the inner planets, and their moons.</p>
+        <canvas id="canvas1" width="800" height="800"></canvas>
   </body>
+  <script src="assets/planetaryMovement.js"></script>
 </html>
