worked on snake

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           <p> This is a planetary movement and gravity simulator I made using javascript. The planets all have their own mass, and their gravity's all interact with eachother. These are the inner planets, and their moons.</p>
           <canvas id="canvas1" width="800" height="800"></canvas>
         </div>
-        <div>
-          <p> This is a snake game I made. Click the picture to go to it!</p>
-          <a href="https://daleblarie.github.io/Snake-Game/"><img src="./assets/Snake Picture.png" width="200" height="200"/></a>
+        <div class="snake">
+          <p> This is a snake game I made. This was the first project I ever did with javascript, and I learned alot from it. Click the picture to go to it!</p>
+          <a href="https://daleblarie.github.io/Snake-Game/"><img src="./assets/Snake Picture.png" width="400" height="400"/></a>
         </div>
         <div>
           <p> Game of life stuff</p>
