--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
           </div>
           <div class="sideBySide">
             <p> Hey there!</p>
-            <p>My name is Dale, and I am a student at the University of Vermont, expected to graduate in May 2020. I am studying Biomedical Engineering, with a concentration in System and Network Biology. At UVM, this basically means that I will be concentrating in Comupter Science in Biomedical Engineering. I am also planning on earning a minor in computer science.</p>
-            <p> I am from New Hampshire, and spent alot of my youth in the great wilderness of New England with the Boy Scouts, eventually earning the rank of Eagle Scout. However, when my brother moved to San Francisco after college, he introduced me to computer programming and web development, and I have been in love with it since.</p>
+            <p>My name is Dale, and I am a student at the University of Vermont, expected to graduate in May 2020. I am studying Biomedical Engineering, with a concentration in System and Network Biology. At UVM, this basically means that I will be concentrating in Computer Science in Biomedical Engineering. I am also planning on earning a minor in computer science.</p>
+            <p> I am from New Hampshire, and spent a lot of my youth in the great wilderness of New England with the Boy Scouts, eventually earning the rank of Eagle Scout. However, when my brother moved to San Francisco after college, he introduced me to computer programming and web development, and I have been in love with it since.</p>
           </div>
         </div>
       </section>
       <section class"projects">
         <h2 id="projects">Projects</h2>
         <div>
-          <p> This is a planetary movement and gravity simulator I made using javascript. The planets all have their own mass, and their gravity's all interact with eachother. These are the inner planets, and their moons.</p>
+          <p> This is a planetary movement and gravity simulator I made using javascript. The planets all have their own mass, and their gravity's all interact with each other. These are the inner planets, and their moons.</p>
           <canvas id="canvas1" width="800" height="800"></canvas>
         </div>
         <div class="snake">
-          <p> This is a snake game I made. This was the first project I ever did with javascript, and I learned alot from it. Click the picture to go to it!</p>
+          <p> This is a snake game I made. This was the first project I ever did with javascript, and I learned a lot from it. Click the picture to go to it!</p>
           <a href="https://daleblarie.github.io/Snake-Game/"><img src="./assets/Snake Picture.png" width="400" height="400"/></a>
         </div>
         <div>
-          <p> Game of life stuff</p>
+          <p> This is my version of Conway's Game of life. I built this using javascript. Click on a cell to toggle it on or off.</p>
           <div id="header">
             <button id="newGrid">New Grid</button>
             <button id="startStopGenerator">Start/Stop Generator</button>
